--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,8 +39,8 @@ file.reference.AbsoluteLayout.jar=C:\\Users\\107209781\\Developer\\mobiliario-pr
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.mobiliario.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${reference.common-mobiliario.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,8 +81,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.mobiliario=../mobiliario
-reference.mobiliario.jar=${project.mobiliario}/dist/mobiliario.jar
+project.common-mobiliario=../common-mobiliario
+reference.common-mobiliario.jar=${project.common-mobiliario}/dist/common-mobiliario.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
