--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,25 @@ dist.jlink.output=${dist.jlink.dir}/warehuse-mobiliario
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-collections-3.2.2.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jcalendar-1.4.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\log4j-1.2.17.jar
+file.reference.mail.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mail.jar
+file.reference.mybatis-3.0.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mybatis-3.0.2.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mysql-connector-java-5.1.23-bin.jar
+file.reference.poi-3.9.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi-3.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${reference.common-mobiliario.jar}
+    ${reference.common-mobiliario.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.mybatis-3.0.2.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-3.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
