--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,25 @@ dist.jlink.output=${dist.jlink.dir}/warehuse-mobiliario
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\AbsoluteLayout.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-beanutils-1.8.0.jar
+file.reference.commons-codec-1.15.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-codec-1.15.jar
 file.reference.commons-collections-3.2.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-collections-3.2.2.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\iText-2.1.7.js1.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jcalendar-1.4.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\log4j-1.2.17.jar
 file.reference.mail.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mail.jar
 file.reference.mybatis-3.0.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mybatis-3.0.2.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mysql-connector-java-5.1.23-bin.jar
+file.reference.png-encoder-1.5.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\png-encoder-1.5.jar
+file.reference.poi-3.7-20101029.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi-3.7-20101029.jar
 file.reference.poi-3.9.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi-3.9.jar
+file.reference.substance.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\substance.jar
+file.reference.zxing-2.0-core.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\zxing-2.0-core.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -54,7 +66,19 @@ javac.classpath=\
     ${file.reference.commons-collections-3.2.2.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.poi-3.9.jar}
+    ${file.reference.poi-3.9.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js1.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.zxing-2.0-core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
