--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -1,14 +1,15 @@
 #conectarse por consola
 #mysql --protocol=tcp --host=35.202.6.26 --port=3306 --user=usr-gaby-mobiliario -p mobiliario
+db.driver=com.mysql.jdbc.Driver
+mybatis.resource=almacen/mybatis/mybatis-config.xml
 
-#db.driver=com.mysql.jdbc.Driver
+# -------- LOCALHOST ----------------------
 #db.url=jdbc:mysql://localhost:3306/mobiliario
 #db.username=root
 #db.password=root
 #db.database.name=mobiliario
 
-#GOOGLE CASA GABY
-db.driver=com.mysql.jdbc.Driver
+# -------- GOOGLE CASA GABY ---------------
 db.url=jdbc:mysql://35.202.6.26:3306/mobiliario
 db.username=usr-gaby-mobiliario
 db.password=gaby1932&%cloud
