--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -2,7 +2,7 @@
 #mysql --protocol=tcp --host=35.202.6.26 --port=3306 --user=usr-gaby-mobiliario -p mobiliario
 db.driver=com.mysql.jdbc.Driver
 mybatis.resource=almacen/mybatis/mybatis-config.xml
-time.sessiont.timeout=20
+time.to.end.session=20
 
 # -------- LOCALHOST ----------------------
 #db.url=jdbc:mysql://localhost:3306/mobiliario
