--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -5,13 +5,13 @@ mybatis.resource=almacen/mybatis/mybatis-config.xml
 time.to.end.session=9
 
 # -------- LOCALHOST ----------------------
-#db.url=jdbc:mysql://localhost:3306/mobiliario
-#db.username=root
-#db.password=root
-#db.database.name=mobiliario
+db.url=jdbc:mysql://localhost:3306/mobiliario
+db.username=root
+db.password=root
+db.database.name=mobiliario
 
 # -------- GOOGLE CASA GABY ---------------
-db.url=jdbc:mysql://35.202.6.26:3306/mobiliario
-db.username=usr-gaby-mobiliario
-db.password=gaby1932&%cloud
-db.database.name=mobiliario
+#db.url=jdbc:mysql://35.202.6.26:3306/mobiliario
+#db.username=usr-gaby-mobiliario
+#db.password=gaby1932&%cloud
+#db.database.name=mobiliario
