--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.iText-2.1.7.js1.jar=C:\\Users\\107209781\\Developer\\mobiliario-p
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jcalendar-1.4.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\log4j-1.2.17.jar
+file.reference.lombok.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\lombok.jar
 file.reference.mail.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mail.jar
 file.reference.mybatis-3.0.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mybatis-3.0.2.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mysql-connector-java-5.1.23-bin.jar
@@ -78,7 +79,8 @@ javac.classpath=\
     ${file.reference.png-encoder-1.5.jar}:\
     ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.substance.jar}:\
-    ${file.reference.zxing-2.0-core.jar}
+    ${file.reference.zxing-2.0-core.jar}:\
+    ${file.reference.lombok.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
