--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,22 @@ dist.jlink.output=${dist.jlink.dir}/mobiliario-almacen
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\AbsoluteLayout.jar
+file.reference.batik-all-1.13.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\batik-all-1.13.jar
+file.reference.bcpkix-jdk15on-1.68.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\bcpkix-jdk15on-1.68.jar
+file.reference.bcprov-jdk15on-1.68.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\bcprov-jdk15on-1.68.jar
 file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-beanutils-1.8.0.jar
 file.reference.commons-codec-1.15.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-codec-1.15.jar
+file.reference.commons-codec-1.15.jar-1=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\commons-codec-1.15.jar
 file.reference.commons-collections-3.2.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\commons-compress-1.20.jar
 file.reference.commons-digester-2.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-digester-2.1.jar
 file.reference.commons-javaflow-20060411.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\commons-logging-1.1.1.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.06.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\curvesapi-1.06.jar
+file.reference.fontbox-2.0.22.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\fontbox-2.0.22.jar
+file.reference.graphics2d-0.30.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\graphics2d-0.30.jar
 file.reference.groovy-all-2.0.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\iText-2.1.7.js1.jar
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\jasperreports-5.6.0.jar
@@ -51,10 +61,23 @@ file.reference.lombok.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\m
 file.reference.mail.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mail.jar
 file.reference.mybatis-3.0.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mybatis-3.0.2.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\mysql-connector-java-5.1.23-bin.jar
+file.reference.pdfbox-2.0.22.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\pdfbox-2.0.22.jar
 file.reference.png-encoder-1.5.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\png-encoder-1.5.jar
 file.reference.poi-3.7-20101029.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi-3.7-20101029.jar
 file.reference.poi-3.9.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi-3.9.jar
+file.reference.poi-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-5.0.0.jar
+file.reference.poi-examples-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-examples-5.0.0.jar
+file.reference.poi-excelant-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-excelant-5.0.0.jar
+file.reference.poi-integration-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-integration-5.0.0.jar
+file.reference.poi-ooxml-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-lite-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-ooxml-lite-5.0.0.jar
+file.reference.poi-scratchpad-5.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\poi-scratchpad-5.0.0.jar
+file.reference.SparseBitSet-1.2.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\SparseBitSet-1.2.jar
 file.reference.substance.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\substance.jar
+file.reference.xml-apis-ext-1.3.04.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\xml-apis-ext-1.3.04.jar
+file.reference.xmlbeans-4.0.0.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\xmlbeans-4.0.0.jar
+file.reference.xmlgraphics-commons-2.4.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\xmlgraphics-commons-2.4.jar
+file.reference.xmlsec-2.2.1.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\poi\\xmlsec-2.2.1.jar
 file.reference.zxing-2.0-core.jar=C:\\Users\\107209781\\Developer\\mobiliario-project\\mobiliario\\librerias\\zxing-2.0-core.jar
 includes=**
 jar.compress=false
@@ -80,7 +103,30 @@ javac.classpath=\
     ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.substance.jar}:\
     ${file.reference.zxing-2.0-core.jar}:\
-    ${file.reference.lombok.jar}
+    ${file.reference.lombok.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.batik-all-1.13.jar}:\
+    ${file.reference.bcpkix-jdk15on-1.68.jar}:\
+    ${file.reference.bcprov-jdk15on-1.68.jar}:\
+    ${file.reference.commons-codec-1.15.jar-1}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.fontbox-2.0.22.jar}:\
+    ${file.reference.graphics2d-0.30.jar}:\
+    ${file.reference.pdfbox-2.0.22.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-examples-5.0.0.jar}:\
+    ${file.reference.poi-excelant-5.0.0.jar}:\
+    ${file.reference.poi-integration-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-lite-5.0.0.jar}:\
+    ${file.reference.poi-scratchpad-5.0.0.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}:\
+    ${file.reference.xmlgraphics-commons-2.4.jar}:\
+    ${file.reference.xmlsec-2.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,7 +162,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=mobiliario-almacen
-main.class=almacen.index.forms.LoginForm
+main.class=almacen.form.index.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
